json parser now kinda working