@@ -1,16 +1,9 @@
-
 import java.nio.file.Files;
-import org.json.*;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class Test {
-  public static void main(String[] args) {
-    try {
-      String myFile = Files.readString(Paths.get("risk/json/Regions.json"));
-      JSONArray myJSON = new JSONArray(myFile);
-      JSONObject myJSON2 = myJSON.getJSONObject(0);
-      //regions.add(new Region();
-      System.out.println(myJSON2.getString("name"));
-    } catch (Exception e) {};
-  }
+    public static void main(String[] args) throws Exception {
+        String myFile = Files.readString(Path.of("risk/json/Regions.json"));
+        System.out.println(myFile);
+    }
 }
